Добавление классов User, Message и ContactChat. Частичная реализация

--- a/QTMessenger/QTMessenger.vcxproj
+++ b/QTMessenger/QTMessenger.vcxproj
@@ -95,8 +95,16 @@
     <QtRcc Include="InterfaceWindow.qrc" />
     <QtUic Include="InterfaceWindow.ui" />
     <QtMoc Include="InterfaceWindow.h" />
+    <ClCompile Include="..\..\..\..\Desktop\ContactChat.cpp" />
+    <ClCompile Include="..\..\..\..\Desktop\Message.cpp" />
+    <ClCompile Include="..\..\..\..\Desktop\User.cpp" />
     <ClCompile Include="InterfaceWindow.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\Desktop\ContactChat.h" />
+    <ClInclude Include="..\..\..\..\Desktop\Message.h" />
+    <ClInclude Include="..\..\..\..\Desktop\User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
