--- a/QTMessenger/QTMessenger.vcxproj
+++ b/QTMessenger/QTMessenger.vcxproj
@@ -93,6 +93,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Message.cpp" />
+    <ClCompile Include="Participator.cpp" />
     <ClCompile Include="User.cpp" />
     <QtRcc Include="InterfaceWindow.qrc" />
     <QtUic Include="InterfaceWindow.ui" />
@@ -106,6 +107,7 @@
     <ClInclude Include="GroupChat.h" />
     <ClInclude Include="Message.h" />
     <ClInclude Include="myqueue.h" />
+    <ClInclude Include="Participator.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
