Добавление ui Логина/Входа

--- a/QTMessenger/QTMessenger.vcxproj
+++ b/QTMessenger/QTMessenger.vcxproj
@@ -93,10 +93,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <QtRcc Include="InterfaceWindow.qrc" />
+    <QtUic Include="InterfaceLogin.ui" />
     <QtUic Include="InterfaceWindow.ui" />
     <QtMoc Include="InterfaceWindow.h" />
+    <ClCompile Include="InterfaceLogin.cpp" />
     <ClCompile Include="InterfaceWindow.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="InterfaceLogin.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
