--- a/QTMessenger/QTMessenger.vcxproj.filters
+++ b/QTMessenger/QTMessenger.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="InterfaceChat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Contact.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="InterfaceLogin.h">
@@ -85,13 +88,13 @@
     <ClInclude Include="User.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="myqueue.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="GroupChat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Participator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Contact.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
