Создание логики работы для чата с сообщениями

--- a/QTMessenger/QTMessenger.vcxproj
+++ b/QTMessenger/QTMessenger.vcxproj
@@ -93,6 +93,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Contact.cpp" />
+    <ClCompile Include="GroupChat.cpp" />
     <ClCompile Include="Message.cpp" />
     <ClCompile Include="Participator.cpp" />
     <ClCompile Include="User.cpp" />
