--- a/QTMessenger/QTMessenger.vcxproj.filters
+++ b/QTMessenger/QTMessenger.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClCompile Include="Contact.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GroupChat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="InterfaceLogin.h">
