Разделение на сервер и клиент. Добавление сокетов

--- a/QTMessenger/QTMessenger.vcxproj
+++ b/QTMessenger/QTMessenger.vcxproj
@@ -42,7 +42,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtInstall>6.8.0_msvc2022_64</QtInstall>
-    <QtModules>core;gui;widgets</QtModules>
+    <QtModules>core;gui;network;widgets</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
   </PropertyGroup>
   <Target Name="QtMsBuildNotFound" BeforeTargets="CustomBuild;ClCompile" Condition="!Exists('$(QtMsBuild)\qt.targets') or !Exists('$(QtMsBuild)\qt.props')">
@@ -91,37 +91,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Contact.cpp" />
-    <ClCompile Include="GroupChat.cpp" />
-    <ClCompile Include="Message.cpp" />
-    <ClCompile Include="Participator.cpp" />
-    <ClCompile Include="User.cpp" />
-    <QtRcc Include="InterfaceWindow.qrc" />
-    <QtUic Include="InterfaceChat.ui" />
-    <QtUic Include="InterfaceLogin.ui" />
-    <QtUic Include="InterfaceWindow.ui" />
-    <QtMoc Include="InterfaceWindow.h" />
-    <ClCompile Include="ContactChat.cpp" />
-    <ClCompile Include="InterfaceChat.cpp" />
-    <ClCompile Include="InterfaceLogin.cpp" />
-    <ClCompile Include="InterfaceWindow.cpp" />
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Contact.h" />
-    <ClInclude Include="ContactChat.h" />
-    <ClInclude Include="GroupChat.h" />
-    <ClInclude Include="Message.h" />
-    <ClInclude Include="Participator.h" />
-    <ClInclude Include="User.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <QtMoc Include="InterfaceLogin.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <QtMoc Include="InterfaceChat.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
