--- a/QTServer1/QTServer1.vcxproj.filters
+++ b/QTServer1/QTServer1.vcxproj.filters
@@ -29,9 +29,15 @@
     <ClCompile Include="Server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MessageSender.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Server.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="MessageSender.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
